with scroll snap

--- a/index.html
+++ b/index.html
@@ -10,22 +10,61 @@
   <main>
     <article data-index="0" data-status="active">
       <section>
-        <h1>Home</h1>
         <button class="article-nav-button" type="button" onclick="handleLeftClick()">Left</button>
+        <div>Home</div>
         <button class="article-nav-button" type="button" onclick="handleRightClick()">Right</button>
       </section>
+      <section>
+        <div>Footer!</div>
+      </section> 
     </article>
     <article data-index="1" data-status="inactive">
       <section>
-        <h1>Right</h1>
         <button class="article-nav-button" type="button" onclick="handleLeftClick()">Go back</button>
+        <div>Welcome to Right</div>
       </section>
+      <section id="section-1">
+        <div>Welcome!</div>
+      </section>
+      <section id="section-2">
+          <div>About Us</div>
+      </section>
+      <section id="section-3">
+          <div>Why Us?</div>
+      </section>
+      <section id="section-4">
+          <div>Our Projects</div>
+      </section>
+      <section id="section-5">
+          <div>Our Team</div>
+      </section>
+      <section id="section-5">
+        <div>This is Footer</div>
+    </section>
     </article>
     <article data-index="2" data-status="inactive">
       <section>
-        <h1>Left</h1>
+        <div>Welcome to Left</div>
         <button class="article-nav-button" type="button" onclick="handleRightClick()">Go back</button>
       </section>
+      <section id="section-1">
+        <div>Welcome!</div>
+      </section>
+      <section id="section-2">
+          <div>About Us</div>
+      </section>
+      <section id="section-3">
+          <div>Why Us?</div>
+      </section>
+      <section id="section-4">
+          <div>Our Projects</div>
+      </section>
+      <section id="section-5">
+          <div>Our Team</div>
+      </section>
+      <section id="section-5">
+        <div>This is Footer</div>
+    </section>
     </article>
   </main>
   <script src="index.js"> </script>
