sticky goback button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </section> 
     </article>
     <article data-index="1" data-status="inactive">
+      <button type="button" class="close-button" onclick="handleLeftClick()">x</button>
       <section>
-        <button class="article-nav-button" type="button" onclick="handleLeftClick()">Go back</button>
         <div>Welcome to Right</div>
       </section>
       <section id="section-1">
@@ -44,9 +44,9 @@
     </section>
     </article>
     <article data-index="2" data-status="inactive">
+      <button type="button" class="close-button" onclick="handleRightClick()">x</button>
       <section>
         <div>Welcome to Left</div>
-        <button class="article-nav-button" type="button" onclick="handleRightClick()">Go back</button>
       </section>
       <section id="section-1">
         <div>Welcome!</div>
