go top button added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </article>
     <article data-index="1" data-status="inactive">
       <button type="button" class="close-button" onclick="handleLeftClick()">x</button>
-      <section>
+      <a class="go-top" href="#home">Go Top</a>
+      <section id="home">
         <div>Welcome to Right</div>
       </section>
       <section id="section-1">
@@ -45,6 +46,7 @@
     </article>
     <article data-index="2" data-status="inactive">
       <button type="button" class="close-button" onclick="handleRightClick()">x</button>
+      <a class="go-top" href="#home">Go Top</a>
       <section>
         <div>Welcome to Left</div>
       </section>
