some issues fixed

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </article>
     <article data-index="1" data-status="inactive">
       <button type="button" class="close-button" onclick="handleLeftClick()">x</button>
-      <a class="go-top" href="#home">Go Top</a>
-      <section id="home">
+      <a class="go-top" href="#web-home">Go Top</a>
+      <section id="web-home">
         <div>Welcome to Right</div>
       </section>
       <section id="section-1">
@@ -46,8 +46,8 @@
     </article>
     <article data-index="2" data-status="inactive">
       <button type="button" class="close-button" onclick="handleRightClick()">x</button>
-      <a class="go-top" href="#home">Go Top</a>
-      <section>
+      <a class="go-top" href="#net-home">Go Top</a>
+      <section id="net-home">
         <div>Welcome to Left</div>
       </section>
       <section id="section-1">
