fontawesome close icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <title>Double Website</title>
 </head>
 <body>
@@ -20,7 +21,8 @@
       </section> 
     </article>
     <article data-index="1" data-status="inactive">
-      <button type="button" class="close-button" onclick="handleLeftClick()">x</button>
+      <!-- <button type="button" class="close-button" onclick="handleLeftClick()">x</button> -->
+      <i class="far fa-times-circle close-button" onclick="handleLeftClick()"></i>
       <a class="go-top" href="#web-home">Go Top</a>
       <section id="web-home">
         <div>Welcome to Right</div>
@@ -45,7 +47,8 @@
     </section>
     </article>
     <article data-index="2" data-status="inactive">
-      <button type="button" class="close-button" onclick="handleRightClick()">x</button>
+      <!-- <button type="button" class="close-button" onclick="handleRightClick()">x</button> -->
+      <i class="far fa-times-circle close-button" onclick="handleRightClick()"></i>
       <a class="go-top" href="#net-home">Go Top</a>
       <section id="net-home">
         <div>Welcome to Left</div>
