--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <article data-index="1" data-status="inactive">
       <!-- <button type="button" class="close-button" onclick="handleLeftClick()">x</button> -->
       <i class="far fa-times-circle close-button" onclick="handleLeftClick()"></i>
-      <a class="go-top" href="#web-home">Go Top</a>
+      <a class="go-top" href="#web-home">
+        <!-- Go Top -->
+        <i class="fas fa-chevron-up"></i>
+      </a>
       <section id="web-home">
         <div>Welcome to Right</div>
       </section>
@@ -49,7 +52,10 @@
     <article data-index="2" data-status="inactive">
       <!-- <button type="button" class="close-button" onclick="handleRightClick()">x</button> -->
       <i class="far fa-times-circle close-button" onclick="handleRightClick()"></i>
-      <a class="go-top" href="#net-home">Go Top</a>
+      <a class="go-top" href="#net-home">
+        <!-- Go Top -->
+        <i class="fas fa-chevron-up"></i>
+      </a>
       <section id="net-home">
         <div>Welcome to Left</div>
       </section>
