section display flex

--- a/index.html
+++ b/index.html
@@ -12,70 +12,104 @@
   <main>
     <article data-index="0" data-status="active">
       <section>
-        <button class="article-nav-button" type="button" onclick="handleLeftClick()">Left</button>
-        <div>Home</div>
-        <button class="article-nav-button" type="button" onclick="handleRightClick()">Right</button>
+        <div>
+          <span>
+            Left
+          </span>
+          <span>
+            Side
+          </span> 
+          <button class="article-nav-button" type="button" onclick="handleLeftClick()"> 
+            Left
+          </button>
+        </div>
+        <div>
+          <span>
+            Right side
+          </span>
+          <button class="article-nav-button" type="button" onclick="handleRightClick()">
+            Right
+          </button>
+        </div>
       </section>
       <section>
-        <div>Footer!</div>
+        <div class="footer">Footer!</div>
+        <div class="footer">Image Area</div>
+        <div class="footer">Image Area</div>
       </section> 
     </article>
     <article data-index="1" data-status="inactive">
       <!-- <button type="button" class="close-button" onclick="handleLeftClick()">x</button> -->
       <i class="far fa-times-circle close-button" onclick="handleLeftClick()"></i>
+      <!-- <i class="fas fa-times" onclick="handleLeftClick()"></i> -->
       <a class="go-top" href="#web-home">
-        <!-- Go Top -->
         <i class="fas fa-chevron-up"></i>
       </a>
       <section id="web-home">
         <div>Welcome to Right</div>
+        <div>Image Area</div>
       </section>
       <section id="section-1">
         <div>Welcome!</div>
+        <div>Image Area</div>
       </section>
       <section id="section-2">
           <div>About Us</div>
-      </section>
+          <div>Image Area</div>
+        </section>
       <section id="section-3">
           <div>Why Us?</div>
-      </section>
+          <div>Image Area</div>
+        </section>
       <section id="section-4">
           <div>Our Projects</div>
-      </section>
+          <div>Image Area</div>
+        </section>
       <section id="section-5">
           <div>Our Team</div>
-      </section>
+          <div>Image Area</div>
+        </section>
       <section id="section-5">
-        <div>This is Footer</div>
+        <div class="footer">This is Footer</div>
+        <div class="footer">Image Area</div>
+        <div class="footer">Image Area</div>
     </section>
     </article>
     <article data-index="2" data-status="inactive">
       <!-- <button type="button" class="close-button" onclick="handleRightClick()">x</button> -->
       <i class="far fa-times-circle close-button" onclick="handleRightClick()"></i>
+      <!-- <i class="fas fa-times" onclick="handleRightClick()"></i> -->
       <a class="go-top" href="#net-home">
-        <!-- Go Top -->
         <i class="fas fa-chevron-up"></i>
       </a>
       <section id="net-home">
         <div>Welcome to Left</div>
+        <div>Image Area</div>
       </section>
       <section id="section-1">
         <div>Welcome!</div>
+        <div>Image Area</div>
       </section>
       <section id="section-2">
           <div>About Us</div>
-      </section>
+          <div>Image Area</div>
+        </section>
       <section id="section-3">
           <div>Why Us?</div>
-      </section>
+          <div>Image Area</div>
+        </section>
       <section id="section-4">
           <div>Our Projects</div>
-      </section>
+          <div>Image Area</div>
+        </section>
       <section id="section-5">
           <div>Our Team</div>
-      </section>
+          <div>Image Area</div>
+        </section>
       <section id="section-5">
-        <div>This is Footer</div>
+        <div class="footer">This is Footer</div>
+        <div class="footer">Image Area</div>
+        <div class="footer">Image Area</div>
     </section>
     </article>
   </main>
