scroll top button hidden on mobiles

--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
     </article>
     <article data-index="1" data-status="inactive">
       <i class="fas fa-times  close-button" onclick="handleLeftClick()"></i>
-      <a class="go-top" href="#web-home">
-        <i class="fas fa-chevron-up"></i>
-      </a>
       <section id="web-home">
         <div>Welkom!</div>
         <div><span id="type-space"></span></div>
@@ -46,6 +43,11 @@
         <div>Welcome!</div>
         <div class="article-image-section"></div>
       </section>
+      <!-- scroll top button  -->
+      <a class="go-top" href="#web-home">
+        <i class="fas fa-chevron-up"></i>
+      </a>
+      <!-- scroll top button end  -->
       <section id="section-2">
           <div>About Us</div>
           <div class="article-image-section"></div>
@@ -70,9 +72,6 @@
     </article>
     <article data-index="2" data-status="inactive">
       <i class="fas fa-times close-button" onclick="handleRightClick()"></i>
-      <a class="go-top" href="#net-home">
-        <i class="fas fa-chevron-up"></i>
-      </a>
       <section id="net-home">
         <div>Welkom!</div>
         <div class="article-image-section"></div>
@@ -81,6 +80,11 @@
         <div>Welcome!</div>
         <div class="article-image-section"></div>
       </section>
+      <!-- scroll top button  -->
+      <a class="go-top" href="#net-home">
+        <i class="fas fa-chevron-up"></i>
+      </a>
+      <!-- scroll top button end  -->
       <section id="section-2">
           <div>About Us</div>
           <div class="article-image-section"></div>
