some typed tags

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
     <article data-index="0" data-status="active">
       <section>
         <div>
-          <span class="home-gallery" id="hmz-space"></span> 
+          <span class="home-gallery" id="a-space"></span> 
+          <span class="home-gallery" id="b-space"></span> 
+          <span class="home-gallery" id="c-space"></span> 
           <div class="article-div-button" onclick="handleLeftClick()"> 
             <i class="fas fa-arrow-left fa-beat-fade"></i>
             &nbsp;Bezoek ons
           </div>
         </div>
         <div>
-          <span class="home-gallery" id="htj-space"></span>
+          <!-- <span class="home-gallery" id="h-space"></span> -->
+          <span class="home-gallery" id="t-space"></span>
           <div class="article-div-button" onclick="handleRightClick()">
             Bezoek ons&nbsp;
             <i class="fas fa-arrow-right fa-beat-fade"></i>
@@ -44,7 +47,7 @@
         <div class="article-image-section"></div>
       </section>
       <!-- scroll top button  -->
-      <a class="go-top" href="#web-home">
+      <a class="scroll-up" href="#web-home">
         <i class="fas fa-chevron-up"></i>
       </a>
       <!-- scroll top button end  -->
@@ -81,7 +84,7 @@
         <div class="article-image-section"></div>
       </section>
       <!-- scroll top button  -->
-      <a class="go-top" href="#net-home">
+      <a class="scroll-up" href="#net-home">
         <i class="fas fa-chevron-up"></i>
       </a>
       <!-- scroll top button end  -->
