some layout changes

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
           <span class="home-gallery" id="c-space"></span> 
           <div class="article-div-button" onclick="handleLeftClick()"> 
             <i class="fas fa-arrow-left fa-beat-fade"></i>
-            &nbsp;Bezoek ons
+            &nbsp;meer info
           </div>
         </div>
         <div>
           <!-- <span class="home-gallery" id="h-space"></span> -->
           <span class="home-gallery" id="t-space"></span>
           <div class="article-div-button" onclick="handleRightClick()">
-            Bezoek ons&nbsp;
+            meer info&nbsp;
             <i class="fas fa-arrow-right fa-beat-fade"></i>
           </div>
         </div>
@@ -37,36 +37,132 @@
       </section> 
     </article>
     <article data-index="1" data-status="inactive">
-      <i class="fas fa-times  close-button" onclick="handleLeftClick()"></i>
+      <i class="fas fa-times  close-button  sticky-item" onclick="handleLeftClick()"></i>
       <section id="web-home">
-        <div>Welkom!</div>
+        <div>
+          <div class="paragraph-titel">
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
         <div><span id="type-space"></span></div>
       </section>
-      <section id="section-1">
-        <div>Welcome!</div>
-        <div class="article-image-section"></div>
-      </section>
       <!-- scroll top button  -->
-      <a class="scroll-up" href="#web-home">
+      <a class="scroll-up sticky-item" href="#web-home">
         <i class="fas fa-chevron-up"></i>
       </a>
       <!-- scroll top button end  -->
+      <section id="section-1">
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-2">
-          <div>About Us</div>
+          <div>
+            <div>
+              Welkom!
+            </div> 
+            <div class="paragraph-text">
+              <div>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+                temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+              </div>  
+              <div>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+                cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+              </div>
+            </div> 
+          </div>
           <div class="article-image-section"></div>
         </section>
       <section id="section-3">
-          <div>Why Us?</div>
-          <div class="article-image-section"></div>
-        </section>
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-4">
-          <div>Our Projects</div>
-          <div class="article-image-section"></div>
-        </section>
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-5">
-          <div>Our Team</div>
-          <div class="article-image-section"></div>
-        </section>
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-5">
         <div class="footer">This is Footer</div>
         <div class="footer">Image Area</div>
@@ -74,36 +170,132 @@
     </section>
     </article>
     <article data-index="2" data-status="inactive">
-      <i class="fas fa-times close-button" onclick="handleRightClick()"></i>
+      <i class="fas fa-times close-button sticky-item" onclick="handleRightClick()"></i>
       <section id="net-home">
-        <div>Welkom!</div>
-        <div class="article-image-section"></div>
-      </section>
-      <section id="section-1">
-        <div>Welcome!</div>
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
         <div class="article-image-section"></div>
       </section>
       <!-- scroll top button  -->
-      <a class="scroll-up" href="#net-home">
+      <a class="scroll-up  sticky-item" href="#net-home">
         <i class="fas fa-chevron-up"></i>
       </a>
       <!-- scroll top button end  -->
+      <section id="section-1">
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-2">
-          <div>About Us</div>
-          <div class="article-image-section"></div>
-        </section>
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-3">
-          <div>Why Us?</div>
-          <div class="article-image-section"></div>
-        </section>
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+          </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-4">
-          <div>Our Projects</div>
-          <div class="article-image-section"></div>
-        </section>
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+        </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-5">
-          <div>Our Team</div>
-          <div class="article-image-section"></div>
-        </section>
+        <div>
+          <div>
+            Welkom!
+          </div> 
+          <div class="paragraph-text">
+            <div>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+              Ipsum dolores impedit eaque alias dolorum reiciendis blanditiis repellendus earum a culpa, 
+              temporibus delectus reprehenderit ipsa. Corrupti voluptas debitis labore repellendus unde.
+            </div>  
+            <div>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+              Molestiae atque nisi soluta quidem explicabo, minus nostrum totam nesciunt minima beatae, 
+              cumque consequatur consectetur esse velit quisquam eius magni voluptate maxime.
+            </div>
+          </div> 
+          </div>
+        <div class="article-image-section"></div>
+      </section>
       <section id="section-5">
         <div class="footer">This is Footer</div>
         <div class="footer">Image Area</div>
