--- a/index.html
+++ b/index.html
@@ -9,8 +9,55 @@
   <title>Double Website</title>
 </head>
 <body>
+  <!-- <nav data-toggled="false" data-transitionable="false">
+    <div id="nav-logo-section" class="nav-section">
+      <a href="#">
+        <i class="fa-solid fa-dumpster-fire"></i>
+      </a>
+    </div>
+    <div id="nav-mobile-section">
+      <div id="nav-link-section" class="nav-section">
+        <a href="#">ABOUT</a>
+        <a href="#">WORK</a>
+      </div>
+      <div id="nav-social-section" class="nav-section">
+        <a href="#">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="#" target="_blank">
+          <i class="fa-brands fa-youtube"></i>
+        </a>    
+        <a href="#">
+          <i class="fa-brands fa-codepen"></i>
+        </a>
+      </div>
+      <div id="nav-contact-section" class="nav-section">
+        <a href="#">GET IN TOUCH</a>
+      </div>
+    </div>
+    <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
+      <span>Menu</span>
+      <i class="fa-solid fa-bars"></i>
+    </button>
+  </nav> -->
   <main>
     <article data-index="0" data-status="active">
+      <nav>
+        <div>
+          <div class="logo">
+            Logo &nbsp;
+            <i class="fa fa-arrow-left"></i>
+          </div>
+        </div>
+        <div class="menu-items">
+          <div class="menu-item" onclick="handleLeftClick()">
+            menu1
+          </div>
+          <div class="menu-item" onclick="handleRightClick()">
+            menu
+          </div>
+        </div>
+      </nav>  
       <section>
         <div>
           <span class="home-gallery" id="a-space"></span> 
