navbar for others sides

--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
       </section> 
     </article>
     <article data-index="1" data-status="inactive">
+      <nav>
+        <div>
+          <div class="logo">
+            Logo &nbsp;
+            <i class="fa fa-arrow-left"></i>
+          </div>
+        </div>
+        <div class="menu-items">
+          <a class="menu-item" href="#">
+            About Us
+          </a>
+          <a class="menu-item" href="#">
+            Our Projects
+          </a>
+          <a class="menu-item" href="#">
+            Our Team
+          </a>
+          <a class="menu-item" href="#">
+            Contact Us
+          </a>
+        </div>
+      </nav>  
       <i class="fas fa-times  close-button  sticky-item" onclick="handleLeftClick()"></i>
       <section id="web-home">
         <div>
@@ -186,6 +208,28 @@
     </section>
     </article>
     <article data-index="2" data-status="inactive">
+      <nav>
+        <div>
+          <div class="logo">
+            Logo &nbsp;
+            <i class="fa fa-arrow-left"></i>
+          </div>
+        </div>
+        <div class="menu-items">
+          <a class="menu-item" href="#">
+            About Us
+          </a>
+          <a class="menu-item" href="#">
+            Our Projects
+          </a>
+          <a class="menu-item" href="#">
+            Our Team
+          </a>
+          <a class="menu-item" href="#">
+            Contact Us
+          </a>
+        </div>
+      </nav>  
       <i class="fas fa-times close-button sticky-item" onclick="handleRightClick()"></i>
       <section id="net-home">
         <div>
