section layout, and image adress change

--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
         </div>
         <div class="menu-items">
           <a class="menu-item" onclick="handleLeftClick()">
-            menu1
+            Hardware
           </a>
           <a class="menu-item" onclick="handleRightClick()">
-            menu
+            Software
           </a>
         </div>
       </nav>  
       <section>
         <div>
-          <span class="home-gallery" id="a-space"></span> 
-          <span class="home-gallery" id="b-space"></span> 
-          <span class="home-gallery" id="c-space"></span> 
+          <div class="home-galleries">
+            <span class="home-gallery" id="a-space"></span> 
+            <span class="home-gallery" id="b-space"></span> 
+            <span class="home-gallery" id="c-space"></span> 
+          </div>
           <div class="article-div-button" onclick="handleLeftClick()"> 
             <i class="fas fa-arrow-left fa-beat-fade"></i>
             &nbsp;meer info
@@ -55,22 +57,22 @@
     <article data-index="1" data-status="inactive">
       <nav>
         <div>
-          <div class="logo">
+          <div class="logo" onclick="handleLeftClick()">
             Logo &nbsp;
             <i class="fa fa-arrow-left"></i>
           </div>
         </div>
         <div class="menu-items">
-          <a class="menu-item" href="#">
+          <a class="menu-item" href="#section-1">
             About Us
           </a>
-          <a class="menu-item" href="#">
+          <a class="menu-item" href="#section-2">
             Our Projects
           </a>
-          <a class="menu-item" href="#">
+          <a class="menu-item" href="#section-3">
             Our Team
           </a>
-          <a class="menu-item" href="#">
+          <a class="menu-item" href="#section-4">
             Contact Us
           </a>
         </div>
@@ -104,7 +106,7 @@
       <section id="section-1">
         <div>
           <div>
-            Welkom!
+            About Us
           </div> 
           <div class="paragraph-text">
             <div>
@@ -124,7 +126,7 @@
       <section id="section-2">
           <div>
             <div>
-              Welkom!
+              Our Projects
             </div> 
             <div class="paragraph-text">
               <div>
@@ -144,7 +146,7 @@
       <section id="section-3">
         <div>
           <div>
-            Welkom!
+            Our Team
           </div> 
           <div class="paragraph-text">
             <div>
@@ -164,7 +166,7 @@
       <section id="section-4">
         <div>
           <div>
-            Welkom!
+            Abonneren
           </div> 
           <div class="paragraph-text">
             <div>
@@ -184,7 +186,7 @@
       <section id="section-5">
         <div>
           <div>
-            Welkom!
+            Contact Us
           </div> 
           <div class="paragraph-text">
             <div>
@@ -210,22 +212,22 @@
     <article data-index="2" data-status="inactive">
       <nav>
         <div>
-          <div class="logo">
+          <div class="logo" onclick="handleRightClick()">
             Logo &nbsp;
             <i class="fa fa-arrow-left"></i>
           </div>
         </div>
         <div class="menu-items">
-          <a class="menu-item" href="#">
+          <a class="menu-item" href="#section-1">
             About Us
           </a>
-          <a class="menu-item" href="#">
+          <a class="menu-item" href="#section-2">
             Our Projects
           </a>
-          <a class="menu-item" href="#">
+          <a class="menu-item" href="#section-3">
             Our Team
           </a>
-          <a class="menu-item" href="#">
+          <a class="menu-item" href="#section-4">
             Contact Us
           </a>
         </div>
